--- a/thirdDime/static/bower.json
+++ b/thirdDime/static/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "angular": "~1.3.5",
-    "angular-material": "master"
+    "angular-material": "master",
+    "angular-animate": "~1.3.5"
   }
 }
