--- a/thirdDime/static/bower.json
+++ b/thirdDime/static/bower.json
@@ -17,6 +17,9 @@
     "jquery": "~2.1.1",
     "angular": "~1.3.5",
     "angular-material": "master",
-    "angular-animate": "~1.3.5",
+    "angular-animate": "~1.3.5"
+  },
+  "resolutions": {
+    "angular": "~1.3.5"
   }
 }
