--- a/thirdDime/package.json
+++ b/thirdDime/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "devDependencies": {
     "grunt-contrib-clean": "~0.6.0",
-    "grunt-git": "~0.3.2",
     "grunt-filerev": "~2.1.2",
     "grunt-usemin": "~3.0.0",
     "grunt-contrib-concat": "~0.5.0",
     "grunt": "~0.4.5",
     "grunt-contrib-cssmin": "~0.11.0",
-    "grunt-contrib-uglify": "~0.7.0"
+    "grunt-contrib-uglify": "~0.7.0",
+    "grunt-contrib-copy": "~0.7.0"
   }
 }
