--- a/thirdDime/package.json
+++ b/thirdDime/package.json
@@ -9,6 +9,7 @@
     "grunt": "~0.4.5",
     "grunt-contrib-cssmin": "~0.11.0",
     "grunt-contrib-uglify": "~0.7.0",
-    "grunt-contrib-copy": "~0.7.0"
+    "grunt-contrib-copy": "~0.7.0",
+    "matchdep": "~0.3.0"
   }
 }
