--- a/thirdDime/package.json
+++ b/thirdDime/package.json
@@ -10,6 +10,8 @@
     "grunt-contrib-cssmin": "~0.11.0",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-copy": "~0.7.0",
-    "matchdep": "~0.3.0"
+    "matchdep": "~0.3.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "jshint-stylish": "~1.0.0"
   }
 }
