--- a/thirdDime/package.json
+++ b/thirdDime/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-copy": "~0.7.0",
     "matchdep": "~0.3.0",
     "grunt-contrib-jshint": "~0.10.0",
-    "jshint-stylish": "~1.0.0"
+    "jshint-stylish": "~1.0.0",
+    "grunt-contrib-imagemin": "~0.9.2"
   }
 }
