--- a/thirdDime/static/.jshintrc
+++ b/thirdDime/static/.jshintrc
@@ -84,6 +84,8 @@
 
     // Custom Globals
     "globals"       : {
-        "angular"   : false
+        "angular"   : false,
+        "require"   : false,
+        "module"    : false
     }        // additional predefined global variables
 }
