--- a/thirdDime/package.json
+++ b/thirdDime/package.json
@@ -13,6 +13,7 @@
     "matchdep": "~0.3.0",
     "grunt-contrib-jshint": "~0.10.0",
     "jshint-stylish": "~1.0.0",
-    "grunt-contrib-imagemin": "~0.9.2"
+    "grunt-contrib-imagemin": "~0.9.2",
+    "grunt-contrib-htmlmin": "~0.3.0"
   }
 }
