--- a/thirdDime/static/bower.json
+++ b/thirdDime/static/bower.json
@@ -17,7 +17,8 @@
     "jquery": "~2.1.1",
     "angular": "~1.3.5",
     "angular-material": "master",
-    "angular-animate": "~1.3.5"
+    "angular-animate": "~1.3.5",
+    "angulartics": "~0.17.1"
   },
   "resolutions": {
     "angular": "~1.3.5"
